# Verdict

./: .eslintrc.json  .gitignore  Dockerfile.web  PROJECT_WRITEUP.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/: a2ui-envelope.schema.json  agui-events.schema.json
evals/: README.md  gaia2_are_runner.py
evals/tasks/: sample_gaia2_tasks.jsonl
scripts/: generate-contracts.sh
services/mcp_gateway/: Dockerfile  pyproject.toml
services/mcp_gateway/mcp_gateway/: __init__.py  main.py
services/mcp_gateway/tests/: test_main.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/app/: __init__.py  approvals.py  extraction_store.py  main.py  state.py  state_backends.py
services/orchestrator/app/contracts/: __init__.py  a2ui.py  events.py
services/orchestrator/app/eval/: __init__.py  auditor.py
services/orchestrator/app/graphs/: __init__.py  efficiency.py  mars_graph.py
services/orchestrator/app/rag/: __init__.py  pipeline.py  schemas.py
services/orchestrator/app/security/: __init__.py  identity.py  policy.py  redact.py
services/orchestrator/app/slm/: __init__.py  triage.py
services/orchestrator/app/telemetry/: __init__.py  trajectory.py
services/orchestrator/app/tools/: __init__.py  firecrawl.py  mcp.py
services/orchestrator/tests/: test_main_stream.py  test_mars_graph.py  test_policy.py  test_rag_pipeline.py  test_trajectory.py
src/agents/runtime/: aguiClient.test.ts  aguiClient.ts  dataModel.test.ts  (+2 more)
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: config.ts
(+11 files in other folders)
