[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Verdict-orchestrator"
version = "0.1.0"
description = "LangGraph-based agentic research orchestrator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.32.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.1",
  "langgraph>=0.2.70",
  "langchain-core>=0.3.30",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "orjson>=3.10.12",
  "python-jose>=3.3.0",
  "datamodel-code-generator>=0.26.0",
  "redis>=5.0.0",
  "langchain-ollama>=0.2.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4", "ruff>=0.8.4"]

[tool.setuptools]
packages = ["app"]
